--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
-    "babel-core": "^6.0.15",
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.2",
     "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
     "browser-sync": "^2.9.0",
+    "browserify": "^13.0.0",
     "del": "^2.0.2",
     "eslint-config-google": "^0.3.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.0.0",
     "gulp-cache": "0.2.2",
     "gulp-concat": "^2.5.2",
     "gulp-cssnano": "^2.0.0",
@@ -25,10 +27,16 @@
     "gulp-uglify": "^1.0.1",
     "gulp-uncss": "^1.0.0",
     "gulp-useref": "^3.0.0",
+    "gulp-util": "^3.0.7",
+    "hbsfy": "^2.5.1",
+    "lodash.assign": "^4.0.6",
     "psi": "^2.0.2",
     "run-sequence": "^1.0.1",
     "sw-precache": "^2.2.0",
-    "sw-toolbox": "^3.0.1"
+    "sw-toolbox": "^3.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
   "engines": {
     "node": ">=0.12"
@@ -41,8 +49,24 @@
     "extends": "google"
   },
   "dependencies": {
-    "backbone": "^1.3.1",
+    "backbone": "1.2.3",
+    "backbone.marionette": "^2.4.4",
+    "handlebars": "^4.0.5",
+    "jquery": "^2.2.1",
     "material-design-lite": "^1.1.2",
     "rx": "^4.1.0"
+  },
+  "browserify": {
+    "transform": [
+      "hbsfy",
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
   }
 }
