--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
   },
   "dependencies": {
     "backbone": "1.2.3",
+    "backbone.localstorage": "^1.1.16",
     "backbone.marionette": "^2.4.4",
+    "backbone.radio": "^1.0.4",
     "bootstrap-material-design": "^0.5.9",
     "handlebars": "^4.0.5",
     "jquery": "^2.2.1",
