--- a/react-es6/package.json
+++ b/react-es6/package.json
@@ -50,6 +50,7 @@
     "extends": "google"
   },
   "dependencies": {
+    "events": "^1.1.0",
     "flux": "^2.1.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8"
