--- a/react-es6/package.json
+++ b/react-es6/package.json
@@ -52,8 +52,10 @@
   "dependencies": {
     "events": "^1.1.0",
     "flux": "^2.1.1",
+    "material-ui": "^0.14.4",
     "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "react-dom": "^0.14.8",
+    "react-tap-event-plugin": "^0.2.2"
   },
   "browserify": {
     "transform": [
