--- a/es2015-sandbox/package.json
+++ b/es2015-sandbox/package.json
@@ -11,10 +11,11 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-jscs": "^3.0.2"
   },
   "scripts": {
-    "tdd": "gulp"
+    "start": "gulp"
   },
   "author": "",
   "license": "ISC",
