--- a/es2015-sandbox/package.json
+++ b/es2015-sandbox/package.json
@@ -11,8 +11,12 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.1",
-    "gulp-jscs": "^3.0.2"
+    "gulp-jscs": "^3.0.2",
+    "karma-browserify": "^5.0.3",
+    "watchify": "^3.7.0"
   },
   "scripts": {
     "start": "gulp"
