--- a/es2015-sandbox/package.json
+++ b/es2015-sandbox/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-runtime": "^6.6.1",
     "jasmine": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
@@ -22,10 +24,5 @@
     "start": "gulp"
   },
   "author": "",
-  "license": "ISC",
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  }
+  "license": "ISC"
 }
