--- a/es2015-sandbox/package.json
+++ b/es2015-sandbox/package.json
@@ -15,13 +15,18 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
     "gulp-jscs": "^3.0.2",
     "karma-browserify": "^5.0.3",
     "watchify": "^3.7.0"
   },
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "lint": "gulp watch-lint"
   },
   "author": "",
   "license": "ISC"
